# OpCode-Logic

./: .gitignore  PRODUCT_DIRECTION.md  README.md  TEST_RESULTS.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  vitest.config.ts
.github/workflows/: release.yml  test.yml
commnet/1.The-Accumulator/BOSS/: TheAccumulator.md
commnet/1.The-Accumulator/Phase1-Registers&ALU/: 01_Mov&Call.md  02_Addition.md  03_Subtraction.md  04_TheXORTrick.md  05_Inc&Dec.md
commnet/1.The-Accumulator/Phase2-Flags&Jumps/: 06_Unconditional.md  07_ZeroFlag.md  08_SignFlag.md  09_Conmparison.md
commnet/1.The-Accumulator/Phase3-LoopStructures/: 10_Countdown.md  11_Accumulate3.md
commnet/2.The-Stack/BOSS/: TheStackMachine.md
commnet/2.The-Stack/Phase1-StackBasics/: 14_SwapTwo.md
commnet/2.The-Stack/Phase2-StackAsBuffer/: 17_ReverseUntil0.md  18_SumFromStack.md
commnet/2.The-Stack/Phase3-StackAlgorithms/: 20_RPN_AddOnly.md  21_Sort3.md  22_Rotate3.md  23_MinMaxFromStack.md
release/: .gitkeep
scripts/: build-release.sh  create-release.sh  test-all-stages.sh
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: levels.rs  lib.rs  main.rs  vm.rs  x86_asm.rs  x86_runtime.rs
src/lib/: curriculum.ts  grandStages.ts  i18n.ts  progress.ts
src/lib/components/: Editor.svelte  Editor.test.ts  ExplanationView.svelte  IOView.svelte  IOView.test.ts  LanguageSelector.svelte  LevelSelector.svelte  RegisterReference.svelte  RegisterView.svelte  RegisterView.test.ts  SyscallReference.svelte  (+2 more)
src/routes/: +layout.svelte  +page.svelte
src/test/: setup.ts
(+184 files in other folders)
